k8s/postges-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deloyment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: db-pvc # name in PVC claim yaml
      containers:
      - name: postgres
        image: postgres
        resources:
         limits:
           memory: "128Mi"
           cpu: "500m"
        ports:
          - containerPort: 5432
        volumeMounts:
          - name: postgres-storage
            mountPath: /var/lib/postgresql/data
            subPath: postgres  # postgres specific
