k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deloyment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: redis
  template:
    metadata:
      labels:
        component: redis
    spec:
      containers:
      - name: redis
        image: redis
 #       resources:
 #         limits:
 #           memory: "128Mi"
 #           cpu: "500m"
        ports:
          - containerPort: 6379
