k8s/clientClusterIP-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: clientcluster-ip-svc
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
  - port: 3000
    targetPort: 3000
