k8s/ingress-service.yaml
# This is for local mode
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
          # UPDATE THIS LINE ABOVE - Fix 1-15-2020
            backend:
              serviceName: clientcluster-ip-svc
              servicePort: 3000
          - path: /api/?(.*)
          # UPDATE THIS LINE ABOVE - Fix 1-15-2020
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
